--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<title>Artem's portfolio</title>
 	<!-- CSS -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Tangerine|Montserrat|Corben">
+	
 </head>
 <body>
 	<!-- <div> tag is used to group block-elements to format them with CSS -->
@@ -40,19 +40,19 @@
 			<h2>About Me</h2>
 	<!-- alt= attribute specifies an alternate text for an image, if the image cannot be displayed -->
 			<img id="my-profile-image" src="assets/images/my profile image.jpg" alt="Artem Tregubchak">
-			<p>
+			<p id="p1">
 				Hi everyone! I live in Houston, TX and I'm Russian, but absolutely not a typical one:
-	<!-- <ul> tag together with the <li> tag to create unordered lists -->
-				<ul type="circle">
-				<li>I don't drink alcohol;</li>
-				<li>I've never seen a bear;</li>
-				<li>I don't know how to play a balalaika.</li>
-				</ul>
 			</p>
-			<p>
+	<!-- <ul> tag together with the <li> tag to create unordered lists -->
+				<ul class="circle" type="circle">
+				<li class="circle">I don't drink alcohol;</li>
+				<li class="circle">I've never seen a bear;</li>
+				<li class="circle">I don't know how to play a balalaika.</li>
+				</ul>
+			<p id="p2">
 				I earned my B.S. degree in Construction Management and worked 5 years as a project manager. This job was boring and didn't match with my personality. I like to be innovative and improve myself every day. The immigration to the USA was an opportunity to transfer my career to the technology industry. As an industry, technology is focused on breaking new ground. Technology isn’t only about coming up with new ideas – it also involves figuring out how to make those ideas work.
 			</p> 
-			<p>
+			<p id="p3">
 				So I'm in UT Houston Coding Bootcamp. I believe that this program will teach me how to be a full-stack developer, gaining the skills to become proficient in frontend and backend technologies. 
 			</p>
     	</section>
