initial site files

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				Hi everyone! I live in Houston, TX and I'm Russian, but absolutely not a typical one:
 			</p>
 	<!-- <ul> tag together with the <li> tag to create unordered lists -->
-				<ul class="circle" type="circle">
+				<ul class="circle">
 				<li class="circle">I don't drink alcohol;</li>
 				<li class="circle">I've never seen a bear;</li>
 				<li class="circle">I don't know how to play a balalaika.</li>
