--- a/portfolio.html
+++ b/portfolio.html
@@ -43,11 +43,11 @@
 	<!-- <span> tag provides a way to add a hook to a part of a text or a part of a document -->
 	<!-- HTML class attribute makes it possible to define equal styles for elements with the same class name -->
 			<ul class="project">
-				<li class="box1"><div><img class="project" src="assets/images/placeholder.jpg" alt="Project 1"><span class="project-title">Hangman</span></div></li>
-				<li class="box2"><div><img class="project" src="assets/images/placeholder.jpg" alt="Project 1"><span class="project-title">RPG Game</span></div></li>
-				<li class="box3"><div><img class="project" src="assets/images/placeholder.jpg" alt="Project 1"><span class="project-title">Trivia Game</span></div></li>
-				<li class="box3"><div><img class="project" src="assets/images/placeholder.jpg" alt="Project 1"><span class="project-title">Rutgers Info Widget</span></div></li>
-				<li class="box4"><div><img class="project" src="assets/images/placeholder.jpg" alt="Project 1"><span class="project-title">Rock Paper Scissors</span></div></li>
+				<li class="box1"><div><img class="project-img" src="assets/images/placeholder.jpg" alt="Project 1"><span class="project-title">Hangman</span></div></li>
+				<li class="box2"><div><img class="project-img" src="assets/images/placeholder.jpg" alt="Project 1"><span class="project-title">RPG Game</span></div></li>
+				<li class="box3"><div><img class="project-img" src="assets/images/placeholder.jpg" alt="Project 1"><span class="project-title">Trivia Game</span></div></li>
+				<li class="box3"><div><img class="project-img" src="assets/images/placeholder.jpg" alt="Project 1"><span class="project-title">Rutgers Info Widget</span></div></li>
+				<li class="box4"><div><img class="project-img" src="assets/images/placeholder.jpg" alt="Project 1"><span class="project-title">Rock Paper Scissors</span></div></li>
 			</ul>
     	</section>
     <!-- <section> tag defines sections in a document, such as chapters, headers, footers, or any other sections of the documen -->	
