initial site files

--- a/index.html
+++ b/index.html
@@ -44,9 +44,13 @@
 				Hi everyone! I live in Houston, TX and I'm Russian, but absolutely not a typical one:
 			</p>
 	<!-- <ul> tag together with the <li> tag to create unordered lists -->
-				<ul class="circle">
+				<ul class="vodka">
 				<li class="circle">I don't drink alcohol;</li>
+				</ul>
+				<ul class="bear">
 				<li class="circle">I've never seen a bear;</li>
+				</ul>
+				<ul class="balalaika">
 				<li class="circle">I don't know how to play a balalaika.</li>
 				</ul>
 			<p id="p2">
