--- a/portfolio.html
+++ b/portfolio.html
@@ -43,12 +43,14 @@
 	<!-- <span> tag provides a way to add a hook to a part of a text or a part of a document -->
 	<!-- HTML class attribute makes it possible to define equal styles for elements with the same class name -->
 			<ul class="project">
-				<li class="box1"><div><img class="project-img" src="assets/images/placeholder.jpg" alt="Project 1"><span class="project-title">Hangman</span></div></li>
+				<li class="box1"><div><img class="project-img" src="assets/images/placeholder.jpg" alt="Project 1"><span class="project-title">Rutgers Info Widget</span></div></li>
 				<li class="box2"><div><img class="project-img" src="assets/images/placeholder.jpg" alt="Project 1"><span class="project-title">RPG Game</span></div></li>
 				<li class="box3"><div><img class="project-img" src="assets/images/placeholder.jpg" alt="Project 1"><span class="project-title">Trivia Game</span></div></li>
-				<li class="box3"><div><img class="project-img" src="assets/images/placeholder.jpg" alt="Project 1"><span class="project-title">Rutgers Info Widget</span></div></li>
-				<li class="box4"><div><img class="project-img" src="assets/images/placeholder.jpg" alt="Project 1"><span class="project-title">Rock Paper Scissors</span></div></li>
+				<li class="box4"><div><img class="project-img" src="assets/images/placeholder.jpg" alt="Project 1"><span class="project-title">Hangman</span></div></li>
+				<li class="box5"><div><img class="project-img" src="assets/images/placeholder.jpg" alt="Project 1"><span class="project-title">Rock Paper Scissors</span></div></li>
 			</ul>
+			<img id="hangman-image" src="assets/images/hangman.gif" alt="Hangman">
+			<img id="RPS" src="assets/images/RPS.png" alt="RPS">
     	</section>
     <!-- <section> tag defines sections in a document, such as chapters, headers, footers, or any other sections of the documen -->	
     	<section id="links">
