--- a/contact.html
+++ b/contact.html
@@ -38,8 +38,8 @@
 	<!-- <section> tag defines sections in a document, such as chapters, headers, footers, or any other sections of the documen -->	
 		<section id="contact-form">
 			<h2>Contact</h2>
-	<!-- when you submit your info you'll be transfer for login.php -->
-			<form id="contact" action="login.php" method="post">    
+	<!-- when you submit your info you'll be transfer to the super interesting image -->
+			<form id="contact" action="assets/images/thank_you.png"post">    
 				<label for="name">Name</label><br>
 				<input id="name" type="text" autocomplete="username" placeholder="John Smith" required><br>
 				<label for="email">Email</label><br>
@@ -47,7 +47,7 @@
 					   placeholder="example@gmail.com" required><br>
 				<label for="textfield">Message</label><br>
 				<textarea id="textfield" rows="8"></textarea><br>
-				<button class="button" type="submit" name="submit">Submit</button>
+					<button class="button" type="submit" name="submit">Submit</button>
 			</form>
     	</section>
 
